--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,25 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BridgeOrganizer"></application>
+        android:theme="@style/Theme.BridgeOrganizer">
+        <activity android:name=".MediaSosialActivity"></activity>
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".SplashScreenActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".DetailPriceListActivity" />
+        <activity android:name=".DetailProjectActivity" />
+        <activity android:name=".ChangePasswordActivity" />
+        <activity android:name=".AccountActivity" />
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".ForgotPasswordActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity" />
+    </application>
 
 </manifest>
